# opendesk

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
assets/charts/: example_longs_weights.json  example_scoring_output.json  example_shorts_weights.json
blocks/en/: index.html
blocks/en/applied_symbolic_regression/: index.html
blocks/en/arbitrage_et_publication_academique/: index.html
blocks/en/asset_class_correlations/: index.html
blocks/en/building_blocks/: index.html
blocks/en/cds_based_models/: index.html
blocks/en/clustering/: index.html
blocks/en/cost_of_capital/: index.html
blocks/en/cycles_de_marche/: index.html
blocks/en/deep_learning_and_macro_finance_models/: index.html
blocks/en/dynamic_porfolio_rebalancing/: index.html
blocks/en/esg/: index.html
contacts/: index.html
docs/: index.md
docs/contacts/: index.md
docs/documentation/: index.md
docs/getting_started/: backtest_blocks.md  create_blocks.md  index.md  installation.md  main_concepts.md  optimize_blocks.md
docs/terms/: index.md  license.md
documentation/: index.html
documentation/contributing/: index.html
documentation/workflow/: index.html
getting_started/: index.html
getting_started/backtest_blocks/: index.html
getting_started/create_blocks/: index.html
getting_started/installation/: index.html
getting_started/main_concepts/: index.html
getting_started/optimize_blocks/: index.html
overrides/: main.html
search/: search_index.json
terms/: index.html
terms/license/: index.html
(+116 files in other folders)
